Fixed Settings page style and improved dark mode readability

--- a/src/app.scss
+++ b/src/app.scss
@@ -12,26 +12,26 @@ body {
   // items
   --ion-item-background: #ffffff;
   --ion-item-color: var(--ion-text-color);
-  --item-border-color: var(--ion-color-step-400);
-  --item-border-color-selected: var(--ion-color-step-800);
-  --item-shadow-color-selected: var(--ion-color-step-400);
+  --item-border-color: var(--ion-color-step-300);
+  --item-border-color-selected: var(--ion-color-step-400);
+  --item-shadow-color-selected: var(--ion-color-step-300);
 
   // dark mode (overrides)
   &.dark {
-    --ion-color-primary: #43a047; //Svar(--ion-color-step-600);
-    --ion-text-color: var(--ion-color-step-950);
-    --ion-text-color-rgb: 198, 227, 184;  // used by menu icons
+    --ion-color-primary: #43a047;
+    --ion-text-color: rgb(223, 223, 223);
+    --ion-text-color-rgb: 223, 223, 223;  // used by menu icons
     // pages
-    --ion-background-color: var(--ion-color-step-100);
+    --ion-background-color: var(--ion-color-step-50);
     // toolbar
     --ion-toolbar-color: var(--ion-text-color);
     --ion-toolbar-color-rgb: var(--ion-text-color-rgb);  // used by menu icons
-    --ion-toolbar-background: var(--ion-color-step-150); // NOTE: this value must also be set in TOOLBAR_BACKGROUND_* const (app.component.ts)
+    --ion-toolbar-background: var(--ion-color-step-100); // NOTE: this value must also be set in TOOLBAR_BACKGROUND_* const (app.component.ts)
     // items
-    --ion-item-background: var(--ion-color-step-150);
+    --ion-item-background: var(--ion-color-step-100);
   }
 
-  // items
+  // list items (settings...)
   --ion-item-border-color: var(--ion-background-color);
 
   // menu
